# libssp_player

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  build_ios.sh  build_osx.sh  generate_jni_header.sh  libssp_player.sln  libssp_player.vcxproj  libssp_player_c.cproj  libssp_player_c.sln
bass/: bass.h  bass_fx.h
jni/: Android.mk  Application.mk  ssp_java.c  ssp_java.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
player-csharp/: SSP.cs  SSPCastServer.cs  SSPDevice.cs  SSPEQPreset.cs  SSPEQPresetBand.cs  SSPLoop.cs  SSPMixer.cs  SSPPlaylistItem.cs  SSPPosition.cs
player-java/: .project
player-sample-android/: .classpath  .project  AndroidManifest.xml  settings.gradle
player-sample-android-xamarin/: BassWrapper.cs  MainActivity.cs  player-sample-android-xamarin.csproj  player-sample-android-xamarin.sln
player-sample-console/: main.c
player-sample-console-csharp/: Program.cs  player-sample-console-csharp.csproj  player-sample-console-csharp.sln
player-sample-ios/: AppDelegate.h  AppDelegate.m  Info.plist  PhoneViewController.h  PhoneViewController.m  ViewController.h  ViewController.m  main.m
player-sample-ios-xamarin/: AppDelegate.cs  Info.plist  Main.cs  MainStoryboard_iPad.storyboard  MainStoryboard_iPhone.storyboard  PlayerViewController.cs  PlayerViewController.designer.cs  player-sample-ios-xamarin.csproj  player-sample-ios-xamarin.sln
player-sample-iosTests/: player_sample_iosTests.m
player-sample-osx/: Info.plist  (+7 more)
(+190 files in other folders)
